--- a/calcServer/pom.xml
+++ b/calcServer/pom.xml
@@ -15,7 +15,24 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.13</version>
+            <version>4.3.4</version>
         </dependency>
     </dependencies>
+ <build>
+        <plugins>
+    <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-jar-plugin</artifactId>
+	    <configuration>
+	        <archive>
+	            <manifest>
+	                <mainClass>
+	                    com.mycompany.calcserver.MainClass
+	                </mainClass>
+	            </manifest>
+	        </archive>
+	    </configuration>
+	</plugin>
+        </plugins>
+             </build>
 </project>
