--- a/RS-REST/pom.xml
+++ b/RS-REST/pom.xml
@@ -60,6 +60,12 @@
     <artifactId>quarkus-scheduler</artifactId>
     <version>1.9.1.Final</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+<dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpclient</artifactId>
+    <version>4.5.13</version>
+</dependency>
 
     </dependencies>
 
