--- a/RS-REST/Dockerfile.rshost
+++ b/RS-REST/Dockerfile.rshost
@@ -2,5 +2,6 @@ FROM archlinux/base
 
 RUN pacman -Sy jre11-openjdk --noconfirm
 
+COPY target/lib/* /deployments/lib/
 COPY target/*.jar /deployments/app.jar
 ENTRYPOINT ["java", "-jar", "deployments/app.jar"]
