--- a/RS-REST/pom.xml
+++ b/RS-REST/pom.xml
@@ -66,6 +66,11 @@
     <artifactId>httpclient</artifactId>
     <version>4.5.13</version>
 </dependency>
+<dependency>
+  <groupId>org.apache.httpcomponents</groupId>
+  <artifactId>httpasyncclient</artifactId>
+  <version>4.1.4</version>
+</dependency>
 
     </dependencies>
 
